--- a/style.css
+++ b/style.css
@@ -1,9 +1,119 @@
+:root {
+    --fondo: #262626;
+}
+
 body {
-    background-color: #000000;
+    background-color: var(--fondo);
 }
 
 #title {
     color: #ffff;
     text-align: center;
-    margin-top: 4vh
+    margin-top: 4vh;
+}
+
+.row,
+.container-fluid,
+body,
+div,
+nav,
+.col-12 {
+    padding: 0;
+    margin: 0;
+}
+
+.principal {
+    height: 100vh;
+}
+
+.info {
+    height: 90vh;
+    margin: 0%;
+    padding: 0%;
+    background: rgba(85, 80, 80, 0.746);
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to top, #3d3a3a50, rgba(7, 7, 7, 0.109)), url(./img/music.jpg);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to top, #42414142, rgba(10, 10, 10, 0.137)), url(./img/music.jpg);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.discografia {
+    height: 100vh;
+    background-color: #E4E4E4;
+}
+
+.contacto {
+    height: 60vh;
+    background-color: #414141
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-decoration: none;
+    border: none;
+    outline: none;
+}
+
+.navbar {
+    height: 12vh;
+    background-color: var(--fondo) !important;
+}
+
+.nav-link {
+    color: #ffff !important;
+    text-transform: uppercase;
+}
+
+.justify-img {
+    display: flex;
+    justify-content: center
+}
+
+.justify-img img {
+    width: 22rem;
+    height: auto
+}
+
+.navbar-toggler-icon {
+    color: #ffff !important;
+}
+
+.img-contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.img-contact span {
+    width: 3.5rem;
+    height: 3.5rem;
+    background-color: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    margin-bottom: 1rem;
+    transition: all 300ms;
+}
+
+.img-contact span:hover {
+    background-color: #777777;
+    cursor: pointer;
+}
+
+.container-img i {
+    font-size: 2rem;
+    font-weight: bold;
+    color: #E4E4E4;
+    padding: 0.4rem;
+    cursor: pointer
+}
+
+.nav-page {
+    position: fixed;
 }
